RESOLVED FIXED102549
[EFL][WK2] Wrong transform when using software path.
https://bugs.webkit.org/show_bug.cgi?id=102549
Summary [EFL][WK2] Wrong transform when using software path.
Yael
Reported 2012-11-16 12:18:06 PST
SSIA
Attachments
Patch (1.64 KB, patch)
2012-11-16 12:22 PST, Yael
no flags
Yael
Comment 1 2012-11-16 12:22:11 PST
WebKit Review Bot
Comment 2 2012-11-18 10:39:36 PST
Comment on attachment 174740 [details] Patch Clearing flags on attachment: 174740 Committed r135075: <http://trac.webkit.org/changeset/135075>
WebKit Review Bot
Comment 3 2012-11-18 10:39:40 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.