[EFL][WK2] Wrong transform when using software path. https://bugs.webkit.org/show_bug.cgi?id=102549

Patch by Yael Aharon <yael.aharon@intel.com> on 2012-11-18
Reviewed by Kenneth Rohde Christiansen.

When using the software path, our transform is not correct and results
in drawing the wrong part of the page. This becomes more obvious after scrolling.

* UIProcess/efl/WebInspectorProxyEfl.cpp:
(WebKit::WebInspectorProxy::platformCreateInspectorPage):

Canonical link: https://commits.webkit.org/120750@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@135075 268f45cc-cd09-0410-ab3c-d52691b4dbfc